themes/openstack/css/combined.css
/* ... */
@media (max-width: 767px) {
  .newsletter-input {
    width: 70%; } }

.newsletter-input::-webkit-input-placeholder {
  color: #888;
  font-size: 12px;
  font-weight: 400;
  text-transform: uppercase; }

.newsletter-input:-moz-placeholder {
  /* Firefox 18- */
  color: #888;
  font-size: 12px;
  font-weight: 400;
  text-transform: uppercase; }

.newsletter-input::-moz-placeholder {
  /* Firefox 19+ */
  color: #888;
  font-size: 12px;
  font-weight: 400;
  text-transform: uppercase; }

.newsletter-input:-ms-input-placeholder {
  color: #888;
  font-size: 12px;
  font-weight: 400;
  text-transform: uppercase; }

.newsletter-input:focus {
  outline: none;
  border: 2px solid #666; }

.newsletter-btn {
  margin-left: 1%;
  display: inline-block;
  background: transparent;
  border: 2px solid #30739C;
  border-radius: 4px;
  color: #30739C;
  font-size: 12px;
  font-weight: 400;
  padding: 10px 15px;
  text-transform: uppercase;
  width: 27%; }

@media (max-width: 767px) {
  .newsletter-btn {
    width: 18%;
    margin-left: 2%;
    padding: 10px; } }

.newsletter-btn:hover {
  border: 2px solid #888;
  color: #999; }

.fine-print {
  margin-top: 20px;
  color: #aaa;
  font-size: 12px; }

.fine-print a {
  color: #aaa;
  text-decoration: underline; }

.fine-print a:hover {
  color: #fff; }

.footer-bottom {
  background: #222;
  padding: 15px 0;
  text-align: center;
  width: 100%; }

.feedback-input {
  display: inline-block;
  background: #222;
  border: 2px solid #444;
  border-radius: 4px;
  color: #777;
  font-size: 12px;
  font-weight: 400;
  padding: 10px 20px;
  width: 310px; }

@media (max-width: 767px) {
  .feedback-input {
    width: 70%; } }

.feedback-input::-webkit-input-placeholder {
  color: #555;
  font-size: 12px;
  font-weight: 400; }

.feedback-input:-moz-placeholder {
  /* Firefox 18- */
  color: #555;
  font-size: 12px;
  font-weight: 400; }

.feedback-input::-moz-placeholder {
  /* Firefox 19+ */
  color: #555;
  font-size: 12px;
  font-weight: 400; }

.feedback-input:-ms-input-placeholder {
  color: #555;
  font-size: 12px;
  font-weight: 400; }

.feedback-input:focus {
  outline: none;
  border: 2px solid #666; }

.feedback-btn {
  margin-left: 11px;
  display: inline-block;
  background: #222;
  border: 2px solid #666;
  border-radius: 4px;
  color: #777;
  font-size: 12px;
  font-weight: 400;
  padding: 10px 30px; }

@media (max-width: 767px) {
  .feedback-btn {
    width: 18%;
    margin-left: 2%;
    padding: 10px; } }

.feedback-btn:hover {
  border: 2px solid #888;
  color: #999; }

/*End Footer*/
/* Line below navigation */
.navbar-default {
  border-bottom: 1px solid #ddd; }

#home .navbar-default {
  border-bottom: none; }

#home .top-site-banner {
  display: none; }

#home-2 .top-site-banner {
  display: none; }

.summit-banner.highlight{
  height: 85px;
}

.summit-banner div {
  background-color: transparent;
}

.summit-banner.highlight .logo-box {
  padding-top: 8px;
}

.summit-banner .logo-box img {
  width: 100%;
}

.summit-banner.editorial .logo-box img {
width: 50%;
margin: 15px auto 0;
}

.summit-banner.highlight .line{
  height: 60px;
  margin: 12px 35px;
  float: left;
  border-right: 1px solid #fff;
}

.summit-banner.highlight .main-text-box {
  padding-top: 8px;
}

.summit-banner.highlight .button-box {
  padding-top: 18px;
  text-align: right;
}

.summit-banner .btn {
  border: none;
  font-size: 16px;
  font-weight: bold;
  padding: 12px;
  width: 100%;
}

.summit-banner .button-box .btn i{
  margin-left: 15px;
}

.summit-banner.editorial {
  padding: 30px 0 0;
}

.summit-banner.editorial .picture-box {
  margin: 24px 0 0 0;
}

.summit-banner.editorial .picture-box img{
  width: 100%;
}

.summit-banner.editorial .btn {
  margin-top: 10px;
}

.summit-banner.editorial .small-text-box {
  text-align: center;
  margin-top: 8px;
  font-weight: bold;
  font-size: 16px;
}

/*End General Inner Page Styles*/
/*Events Page*/
.eventsBanner {
  height: 150px;
  padding: 20px; }

.eventsPhotoCaption {
  background: rgba(0, 0, 0, 0.3);
  border-radius: 4px;
  padding: 10px;
  color: white; }

.news-section.full {
  padding: 20px 0; }

.eventTitleArea {
  text-align: center;
  margin: 40px 0; }

.eventTitleArea h1 {
  color: #333;
  font-weight: 300; }

.postEvent {
  float: left;
  width: 100%;
  padding: 30px 5%;
  background: #F4F5F8;
  margin: 20px 0 10px;
  text-align: center; }

.postEvent p {
  margin-bottom: 20px; }

.postEvent a {
  background: #2A4E68;
  padding: 10px 25px;
  border-radius: 4px;
  color: #fff; }

.eventBlock {
  float: left;
  width: 100%; }

.eventBlock.summit .date {
  border-color: #2A4E68;
  color: #2A4E68; }

.eventBlock.past h2 {
  margin-top: 50px; }

.eventBlock.past .date {
  border-color: #68C8C3;
  color: #68C8C3; }

/*End Events Page*/
/*Community Page*/
.communityBoxes {
  margin: 30px 0 10px;
  font-size: 13px; }

.communityBoxes h2 {
  font-size: 20px;
  font-weight: 400;
  margin-bottom: 15px; }

.communityBoxes h2 a {
  color: #DA422F; }

.developersRow {
  border-top: 1px solid #eee;
  border-bottom: 1px solid #eee;
  padding: 20px 30px;
  margin-bottom: 30px; }

.devLabel {
  float: left;
  margin-right: 30px;
  font-weight: 700; }

ul#developerActivity {
  float: left;
  padding-left: 0;
  margin: 0; }

ul#developerActivity li {
  list-style: none;
  display: inline-block; }

ul#developerActivity li a {
  font-weight: 700;
  color: #222; }

ul#developerActivity li span {
  background: #E8EEF5;
  padding: 5px 10px;
  border-radius: 4px;
  margin-right: 5px;
  color: #2A4E68;
  font-size: 11px;
  font-weight: 400; }

/*End Community Page*/
/*Sofware Page*/
.software {
  margin-top: 30px; }

.software-top {
  text-align: center; }

.software-top h1 {
  margin: 5px 0 10px; }

p.icon {
  text-align: center;
  margin: 40px 0 0; }

p.software-description {
  text-transform: uppercase;
  font-size: 13px;
  color: #777; }

.openstack-diagram {
  margin-bottom: 3em; }
/* ... */

